Fix fdo#59641 - Duplication in formula when import mathml

It seems to be a typo, because after import the formula, the pDoc->GetText()
returns all the text, the previus text and the new text imported from formula.

Change-Id: Ia317a23d27964a9d1264dcaf9ec0d38b8c586655